# AEPF_Mk3

./: 1.26.0  CONTRIBUTING.md  ReadME.md  build_pillow.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  setup_env.py  validate_paths.py
AEPF_Core/: Context_manager.py  __init__.py  context_engine.py  context_models.py  ethical_alignment_tracker.py  ethical_governor.py  location_context.py  report_functions.py  report_generator.py
AEPF_Core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
AEPF_Core/decision_analysis/: __init__.py  feedback_loop.py  pattern_logger.py  probability_scorer.py
AEPF_Core/ethical_prisms/: __init__.py  ecocentric.py  equity_focused.py  human_centric.py  innovation_focused.py  sentient_first.py
AEPF_Core/metrics/: fairness_metrics.py  impact_metrics.py  recommendation_metrics.py  risk_metrics.py  robustness_metrics.py  stakeholder_metrics.py  technical_metrics.py
AI_Models/: __init__.py
AI_Models/Candidate_Selection/: __init__.py
AI_Models/Loan_default/: __init__.py  model_analysis.py  (+5 more)
Test_Scripts/: test_core_framework.py  test_scene.py
Trigger/: __init__.py  trigger_system.py
UI/: Style.css  app.py
config/: scenarios.yaml
data/: scenarios.yaml
docs/: test_results.md
pages/: 1_Detailed_Model_Report.py  detailed_model_report.py
src/: ethical_governor.py
tests/: conftest.py  test_AEPF_core.py  test_core_framework.py  test_ecocentric_prism.py  test_equity_focus_prism.py  test_ethical_governor.py  test_human_centric_prism.py  test_innovation_focus_prism.py  test_sentient_first_prism.py
(+312 files in other folders)
